fix: adjust padding and text alignment in children class of Calculator.css

--- a/client/src/app/components/calculator/Calculator.css
+++ b/client/src/app/components/calculator/Calculator.css
@@ -19,10 +19,9 @@
 .children {
   background-color: #f0f0f0;
   border: none;
-  padding: 12px;
-  text-align: center;
   border-radius: 25px;
   box-shadow: var(--box-shadow);
+  padding: 8px 8px 0px 15px
 }
 
 .div1 {
